[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/images/background/bg2.png" type="Texture" id=1]
[ext_resource path="res://Assets/images/background/bg1.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/background/bg3.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = SubResource( 9 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="BG1" type="Sprite" parent="."]
position = Vector2( -100, 0 )
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 2 )
centered = false

[node name="BG2" type="Sprite" parent="."]
position = Vector2( -100, 0 )
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 1 )
centered = false

[node name="BG3" type="Sprite" parent="."]
position = Vector2( -100, 0 )
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 3 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 800.0
custom_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 1280.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "Herobrine Card Game"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 1280.0
margin_bottom = 586.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 1080.0
margin_bottom = 223.0
custom_constants/separation = 50

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
text = "Jouer"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 880.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 8 )
text = "Deck"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 880.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 10 )
text = "Quitter"
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
